# lyra

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
src/lyra/: __init__.py  __main__.py  cli.py
src/lyra/core/: __init__.py  agent.py  message.py
src/lyra/emotional/: __init__.py  state.py
src/lyra/mesh/: __init__.py  connector.py
